...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Account"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Account"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Request Sent!"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Friend"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirm"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "From Friends"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Success"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Approve"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Block user?"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Block User"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reject"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reject request"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Blocked"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pending"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Requested"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Friends"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unblock user?"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unblock User"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue with Google"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Personal Library"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Licenses"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Privacy Policy"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terms of Service"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "App Version"
          }
        },
...
