...

    private func setupCategoryTabs() {
        for (index, (tab, titleKey)) in Self.tabTitles.enumerated() {
            let button = createTabButton(title: String(localized: String.LocalizationValue(stringLiteral: titleKey)), tag: index, tab: tab)
            switch tab {
            case .friends:
                button.accessibilityIdentifier = "Friends_tab"
            case .pending:
                button.accessibilityIdentifier = "Pending"
            case .requested:
                button.accessibilityIdentifier = "Requested"
            case .blocked:
                button.accessibilityIdentifier = "Blocked"
...
